# neon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.md  install.sh
.github/workflows/: ci.yml  image.yml  release.yml  vscode.yml
bench/: run_all_benchmarks.py
bench/binary-trees/: run_bench.py
bench/binary-trees/c/: main.c
bench/binary-trees/clojure/: main.clj
bench/binary-trees/cpp/: main.cpp
bench/binary-trees/dotnet/: Program.cs
bench/binary-trees/elixir/: main.exs
bench/binary-trees/go/: main.go
bench/binary-trees/java/: Main.java
bench/binary-trees/js/: main.js
bench/binary-trees/lua/: main.lua
bench/binary-trees/neon/: neon.toml
bench/binary-trees/perl/: main.pl
bench/binary-trees/python/: main.py
bench/binary-trees/ruby/: main.rb
bench/binary-trees/rust/: Cargo.toml
bench/binary-trees/ts/: main.ts
bench/binary-trees/zig/: main.zig
bench/brainfuck/: run_bench.py
bench/brainfuck/elixir/: main.exs
bench/brainfuck/ts/: main.ts
bench/n-body/: run_bench.py
bench/n-body/c/: main.c
bench/n-body/clojure/: main.clj
bench/n-body/cpp/: main.cpp
bench/n-body/dotnet/: Program.cs
bench/n-body/elixir/: main.exs
bench/n-body/go/: main.go
bench/n-body/java/: Main.java
bench/n-body/js/: main.js
bench/n-body/lua/: main.lua
bench/n-body/neon/: neon.toml
bench/n-body/perl/: main.pl
bench/n-body/python/: main.py
bench/n-body/ruby/: main.rb
bench/n-body/rust/: Cargo.toml
bench/n-body/ts/: main.ts
bench/n-body/zig/: main.zig
bench/word-frequency/: run_bench.py
bench/word-frequency/c/: main.c
bench/word-frequency/clojure/: main.clj
bench/word-frequency/cpp/: main.cpp
bench/word-frequency/dotnet/: Program.cs
bench/word-frequency/elixir/: main.exs
bench/word-frequency/go/: main.go
bench/word-frequency/java/: Main.java
bench/word-frequency/js/: main.js
bench/word-frequency/lua/: main.lua
bench/word-frequency/perl/: main.pl
bench/word-frequency/python/: main.py
bench/word-frequency/ruby/: main.rb
bench/word-frequency/rust/: Cargo.toml
bench/word-frequency/ts/: main.ts
bench/word-frequency/zig/: main.zig
cli/: Cargo.toml  build.rs
cli/src/: buildcfg.rs  emit.rs  frontend.rs  main.rs  project.rs  stdlib.rs  sysroot.rs
cli/src/cmd/: build.rs  check.rs  compile.rs  doctor.rs  fmt.rs  init.rs  ir.rs  mod.rs  run.rs  sysroot.rs  test.rs
cli/tests/: diagnostics_reach_stderr.rs  sanitizer_link.rs  test_verb.rs
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  diagnostic.rs  expand.rs  lib.rs  ops.rs  stdlib.rs
compiler/src/ast/: ids.rs  spans.rs  tests.rs  visit.rs
compiler/src/backend/: c.rs  ctype.rs  mod.rs
compiler/src/format/: mod.rs  tests.rs
compiler/src/ir/: effects.rs  lower.rs  mod.rs  opt.rs  refcount.rs  repr.rs  ssa.rs  unique.rs
compiler/src/lexer/: error.rs  mod.rs  tests.rs  token.rs  trivia.rs
compiler/src/parser/: error.rs  mod.rs  tests.rs
compiler/src/typecheck/: bdd.rs  check.rs  check_tests.rs  dispatch.rs  dispatch_tests.rs  empty.rs  env.rs  env_tests.rs  generic.rs  mod.rs  narrow.rs  ordered.rs  print.rs  resolve.rs  result.rs  tests.rs  types.rs
compiler/tests/: backend_run.rs  corpus_check.rs  corpus_roundtrip.rs  ir_lower.rs  unique_guard.rs  unique_report.rs
docs/: decisions.md  finalpush.md
docs/design/: annotations.md  cross-library-identity.md  dispatch.md  errors.md  identity.md  ir.md  modules.md  opacity.md  resources.md  stdlib.md  typechecker.md
docs/tasks/: throwing-closures.md
extra/neovim/: README.md
extra/neovim/ftdetect/: neon.lua
extra/neovim/ftplugin/: neon.lua
extra/neovim/indent/: neon.vim
extra/neovim/plugin/: neon.lua
extra/neovim/syntax/: neon.vim
extra/tree-sitter-neon/: .gitignore  README.md  grammar.js  package.json  tree-sitter.json
extra/tree-sitter-neon/queries/: highlights.scm  indents.scm  locals.scm  textobjects.scm
extra/tree-sitter-neon/src/: grammar.json  node-types.json  parser.c  scanner.c
extra/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
extra/vscode/client/: extension.js
extra/vscode/syntaxes/: neon.tmLanguage.json
extra/zed/: README.md  extension.toml
extra/zed/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: analysis.rs  features.rs  main.rs  position.rs  toolchain.rs
runtime/: CMakeLists.txt  build.rs
runtime/include/: libneon_rt.h  rt.h
runtime/include/neon/: any.h  arith.h  core.h  file.h  io.h  lifecycle.h  list.h  map.h  math.h  resource.h  string.h  trap.h
runtime/models/: README.md
runtime/models/map/: main.c
runtime/models/resource/: main.c
runtime/src/: any.c  arith.c  file.c  internal.h  io.c  lifecycle.c  list.c  map.c  math.c  resource.c  rt.c  string.c  trap.c
stdlib/: prelude.neon
stdlib/std/: cmp.neon  fmt.neon  fs.neon  io.neon  math.neon  path.neon  string.neon
stdlib/std/collections/: list.neon  map.neon
tests/lang/: README.md  expected-pass.txt
tests/lang/basics/: io_print_variants.neon  io_print_variants.stdout  test_blocks_do_not_run.neon  test_blocks_do_not_run.stdout
tests/lang/closures/: generic_throws_parameter.neon  generic_throws_parameter.stdout  generic_throws_solves_to_never.neon  throwing_fn_as_value.neon  throwing_fn_as_value.stdout  throwing_lambda.neon  throwing_lambda.stdout  throws_mismatch_needs_adapter.neon
tests/lang/collections/: a_caught_write_error_survives_a_loop.neon  a_caught_write_error_survives_a_loop.stdout  a_read_after_a_loop_write_sees_the_old_list.neon  a_read_after_a_loop_write_sees_the_old_list.stdout  discarded_index_still_traps.neon  inplace_write_is_invisible_to_a_callers_alias.neon  iolist_and_files.neon  list_fill.neon  list_fill.stdout  list_generics_are_covariant.neon  list_iteration.neon  list_iteration.stdout  list_set_releases_a_replaced_element.neon  list_set_releases_a_replaced_element.stdout  list_sort.neon  list_sort.stdout  map_equality.neon  map_iteration.neon  map_iteration.stdout  map_list_key.neon  map_list_key.stdout  map_union_key.neon  map_union_key.stdout  map_update_probes_once.neon  map_update_probes_once.stdout
(+137 files in other folders)
