[package]
name = "neon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
eyre = "0.6.12"
neon-compiler = { path = "../compiler" }
neon-runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
