[package]
name = "neon-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neon-lsp"
path = "src/main.rs"

# `lsp-server` and `lsp-types` rather than `tower-lsp`: the protocol loop here is
# synchronous and single-threaded, and a check is a blocking CPU pass over a whole module,
# so an async runtime would buy nothing and cost a tokio dependency in a workspace that
# has none. These are the crates rust-analyzer uses for the same reason.
[dependencies]
# The channel type `lsp-server` hands out. Named directly only for `recv_timeout`'s error
# type, which the debounce in `main.rs` matches on; the version tracks lsp-server's so the
# two share one copy of the crate rather than disagreeing about the type.
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.95"
neon-compiler = { path = "../compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
